# xgrid

./: Cargo.toml  README.md  test.rs
src/: component.rs  events.rs  frame.rs  grid.rs  handle.rs  lib.rs  main.rs  manager.rs  message.rs  observer.rs  render_actor.rs  units.rs  update_queue.rs
src/frame/: data.rs  handle.rs  renderer.rs  shader.wgsl
src/grid/: builder.rs  data.rs  renderer.rs
src/update_queue/: back.rs  front.rs
