[package]
name = "xgrid_test"
version = "0.1.0"
edition = "2021"

[lib]
name = "xgrid"
crate-type = ["cdylib", "rlib"]


[dependencies]
cfg-if = "1"
winit = "0.29.1"
wgpu = "0.19.1"
env_logger = "0.11.1"
log = "0.4"
pollster = "0.3"
bytemuck = { version = "1.12", features = [ "derive" ] }
web-sys = "0.3"
const-fnv1a-hash = "1.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wgpu = { version = "0.19", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
